# llmsrules

./: .gitignore  AGENTS.md  README.md  install-skills.sh  skills-lock.json
.cursor/rules/: deployment.mdc  fastapi.mdc  ibis.mdc  makefile.mdc  project-layout.mdc  pyproject.mdc  scikit-learn.mdc
.pi/skills/: absurd
ai/: AGENTS.md
claude/: CLAUDE-go.md  deployment.md  ducklake-reference.md  fastapi.md  ibis.md  openai-agents.md  openai-webhooks.md  project-layout.md  pyproject.md  python-cli.md  scikit-learn.md
cursor/rules/: go.mdc  ibis.mdc  openai-agents.mdc  openai-webhooks.mdc  python-cli.mdc
project-templates/: .gitignore  README.md  test-templates.py  test-templates.sh
project-templates/go-service/: cookiecutter.json
project-templates/python-bayesian-experiment/: cookiecutter.json
project-templates/python-bayesian-experiment/{{cookiecutter.project_slug}}/: .env.server.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
project-templates/python-bayesian-experiment/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: schemas.py
project-templates/python-bayesian-experiment/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/cli/: experiments.py  main.py
project-templates/python-bayesian-experiment/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/db/: __init__.py  store.py
project-templates/python-bayesian-experiment/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/models/: __init__.py  bernoulli.py
project-templates/python-bayesian-experiment/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/server/: main.py
project-templates/python-bayesian-experiment/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/server/routers/: __init__.py  experiments.py
project-templates/python-bayesian-experiment/{{cookiecutter.project_slug}}/tests/: test_server.py
project-templates/python-cli/: cookiecutter.json
project-templates/python-cli/{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml  simple.py
project-templates/python-cli/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: cli.py
project-templates/python-cli/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/bar/: __init__.py  commands.py
project-templates/python-cli/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/foo/: __init__.py  commands.py
project-templates/python-cli/{{cookiecutter.project_slug}}/tests/: test_cli.py
project-templates/python-ducklake-service/: cookiecutter.json
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/k8s/prod/: deployment.yaml  ingress.yaml  service.yaml
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/migrations/: __init__.py  lake.py  runner.py
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/migrations/app/: 001_users_sessions.down.sql  001_users_sessions.up.sql  002_tags.down.sql  002_tags.up.sql
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/scripts/: init-db.sql
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/server/: config.py  deps.py  email.py  lake_admin.py  log_config.py  main.py  metrics.py
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/server/auth/: __init__.py  jwt.py  magic_link.py  session.py
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/server/routes/: __init__.py  api.py  pages.py  tags.py
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/static/css/: style.css
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/templates/: base.html  dashboard.html  entities.html  index.html
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/templates/auth/: magic_link.html
project-templates/python-ducklake-service/{{cookiecutter.project_slug}}/tests/: conftest.py  test_auth.py  test_health.py
project-templates/python-service/: cookiecutter.json
project-templates/python-service/{{cookiecutter.project_slug}}/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  pyproject.toml
project-templates/python-service/{{cookiecutter.project_slug}}/k8s/prod/: deployment.yaml
project-templates/python-service/{{cookiecutter.project_slug}}/server/: main.py
project-templates/python-service/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: cli.py
project-templates/python-service/{{cookiecutter.project_slug}}/tests/: test_server.py
skills/air-go/: SKILL.md
skills/bubbletea/: SKILL.md
skills/ducklake/: SKILL.md
skills/litestream-k8s/: SKILL.md
skills/marimo-notebook/: SKILL.md
skills/openai-agents/: SKILL.md
skills/parquet-analysis/: EXAMPLES.md  REFERENCE.md  SKILL.md
skills/pg-messaging/: SKILL.md
skills/playwright-e2e/: SKILL.md
skills/pyproject-config/: SKILL.md
skills/python-cli/: SKILL.md
skills/redfin-api/: SKILL.md
(+30 files in other folders)
