[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [{name = "{{cookiecutter.author}}"}]
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "python-jose[cryptography]>=3.3",
    "structlog>=23.0",
    "prometheus-fastapi-instrumentator>=6.0",
    "jinja2>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pymc>=5.10",
    "arviz>=0.17",
    "mlflow>=2.10",
    "ibis-framework[duckdb]>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "ipykernel>=6.0",
]

[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.package_name}}.cli.main:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
